# novatel_edie

./: CMakeLists.txt  conanfile.txt
.github/workflows/: build.yml
examples/: CMakeLists.txt
examples/novatel/command_encoding/: CMakeLists.txt  command_encoding.cpp
examples/novatel/converter_components/: CMakeLists.txt  converter_components.cpp
examples/novatel/converter_file_parser/: converter_file_parser.cpp
examples/novatel/converter_fileparser/: CMakeLists.txt  converter_fileparser.cpp
examples/novatel/converter_parser/: CMakeLists.txt  converter_parser.cpp
examples/novatel/dynamic_components/: CMakeLists.txt  dynamic_components.cpp
examples/novatel/dynamic_file_parser/: dynamic_file_parser.cpp
examples/novatel/dynamic_fileparser/: CMakeLists.txt  dynamic_fileparser.cpp
examples/novatel/dynamic_parser/: CMakeLists.txt  dynamic_parser.cpp
examples/novatel/json_parser/: CMakeLists.txt  json_parser.cpp
examples/novatel/rangecmp/: CMakeLists.txt  range_decompressor_example.cpp
examples/novatel/rxconfig/: CMakeLists.txt  rxconfig_example.cpp
lib/spdlog_setup/: setup_error.hpp  spdlog_setup.hpp
lib/spdlog_setup/details/: conf_impl.hpp  template_impl.hpp
src/decoders/common/: CMakeLists.txt
src/decoders/common/api/: circular_buffer.hpp  circularbuffer.hpp  common.hpp  crc32.hpp  encoder.hpp  framer.hpp  json_reader.hpp  jsonreader.hpp  nexcept.h  (+1 more)
src/decoders/dynamic_library/: CMakeLists.txt
src/decoders/novatel/: CMakeLists.txt
src/hw_interface/dynamic_library/: CMakeLists.txt
src/hw_interface/stream_interface/: CMakeLists.txt
(+84 files in other folders)
