add_subdirectory(novatel/command_encoding)
add_subdirectory(novatel/converter_fileparser)
add_subdirectory(novatel/converter_components)
add_subdirectory(novatel/converter_parser)
add_subdirectory(novatel/json_parser)
add_subdirectory(novatel/rangecmp)
add_subdirectory(novatel/rxconfig)
add_subdirectory(novatel/dynamic_fileparser)
add_subdirectory(novatel/dynamic_components)
add_subdirectory(novatel/dynamic_parser)
